The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name:
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/07/30 17:55:00 CDT
Tag: blume-20040730-various
Description:

Gearing up towards 110.47...

- various minor bugfixes to ml-nlffigen
- a beginning of a manual for nlffi

- eliminated 'export name=value' in config/install.sh as this does
  not work with certain versions of /bin/sh
  (Thanks to David King at Motorola for catching this.)

- several bugfixes provided or suggested by David Hansel at Reactive Systems:
  - added a test for tm==NULL to gmtime.c and localtime.c
  - applied patch for incorrect GetFileTime under win32
  - toSeconds -> toMilliseconds in Win32/win32-process.sml

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/07/21 18:20:00 CDT
Tag: blume-20040721-nlffigen
Description:

- Fixed minor issue in ml-nlffigen: Now generate structure T_foo
  for a typedef to an incomplete type, but leave out the "typ" member.
  (This is just for consistency.)
- Started to produce what is supposed to become better (i.e., comprehensive)
  documentation of what ml-nlffigen does and produces.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/07/14 16:25:00 CDT
Tag: blume-20040714-union
Description:

Added C_UNION to c-calls/c-types.sml and updated the machinery
(ml-nlffigen, cproto.sml) that conveys C function interface
information to the code generator.

However, the actual architecture-specific implementation of function
arguments and results that are C unions is still not implemented.
