@@ -17,7 +17,7 @@ LD_LIBS =
 #XDEFS = /DDEBUG_TRACE_CCALL
 XDEFS =
 BASE_DEFS =
-DEFS		= $(XDEFS) $(BASE_DEFS) /DHOST_X86 /DTARGET_X86 /DOPSYS_WIN32 /DVREGS /DINDIRECT_CFUNC
+DEFS		= $(XDEFS) $(BASE_DEFS) /DHOST_X86 /DTARGET_X86 /DOPSYS_WIN32 /DVREGS /DINDIRECT_CFUNC /DDLOPEN
 TARGET =	X86
 VERSION =	v-x86-win32
 RUNTIME =	run.x86-win32.exe
